fix fdo#39485 recalculate matrix formula dimension correctly

ScFormulaCell::GetMatrixEdge() when recalculating its dimension obtained
the matrix origin of itself instead of a neighboring matrix formula if
encountered such, effectively adding that other matrix to its own cells
occupying dimension.